// THIS FILE IS GENERATED BY ftrace_proto_generator.py, PLEASE DON'T EDIT IT!
// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

// category: writeback
// /sys/kernel/debug/tracing/events/writeback/balance_dirty_pages/format
message BalanceDirtyPagesFormat {
    string bdi = 1;
    uint64 limit = 2;
    uint64 setpoint = 3;
    uint64 dirty = 4;
    uint64 bdi_setpoint = 5;
    uint64 bdi_dirty = 6;
    uint64 dirty_ratelimit = 7;
    uint64 task_ratelimit = 8;
    uint32 dirtied = 9;
    uint32 dirtied_pause = 10;
    uint64 paused = 11;
    uint64 pause = 12;
    uint64 period = 13;
    uint64 think = 14;
    uint32 cgroup_ino = 15;
}

// /sys/kernel/debug/tracing/events/writeback/bdi_dirty_ratelimit/format
message BdiDirtyRatelimitFormat {
    string bdi = 1;
    uint64 write_bw = 2;
    uint64 avg_write_bw = 3;
    uint64 dirty_rate = 4;
    uint64 dirty_ratelimit = 5;
    uint64 task_ratelimit = 6;
    uint64 balanced_dirty_ratelimit = 7;
    uint32 cgroup_ino = 8;
}

// /sys/kernel/debug/tracing/events/writeback/global_dirty_state/format
message GlobalDirtyStateFormat {
    uint64 nr_dirty = 1;
    uint64 nr_writeback = 2;
    uint64 nr_unstable = 3;
    uint64 background_thresh = 4;
    uint64 dirty_thresh = 5;
    uint64 dirty_limit = 6;
    uint64 nr_dirtied = 7;
    uint64 nr_written = 8;
}

// /sys/kernel/debug/tracing/events/writeback/wbc_writepage/format
message WbcWritepageFormat {
    string name = 1;
    uint64 nr_to_write = 2;
    uint64 pages_skipped = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 for_background = 6;
    int32 for_reclaim = 7;
    int32 range_cyclic = 8;
    uint64 range_start = 9;
    uint64 range_end = 10;
    uint32 cgroup_ino = 11;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_bdi_register/format
message WritebackBdiRegisterFormat {
    string name = 1;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_congestion_wait/format
message WritebackCongestionWaitFormat {
    uint32 usec_timeout = 1;
    uint32 usec_delayed = 2;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_dirty_inode/format
message WritebackDirtyInodeFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 flags = 4;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_dirty_inode_enqueue/format
message WritebackDirtyInodeEnqueueFormat {
    uint64 dev = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint32 mode = 4;
    uint64 dirtied_when = 5;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_dirty_inode_start/format
message WritebackDirtyInodeStartFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 flags = 4;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_dirty_page/format
message WritebackDirtyPageFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 index = 3;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_exec/format
message WritebackExecFormat {
    string name = 1;
    uint64 nr_pages = 2;
    uint64 sb_dev = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 range_cyclic = 6;
    int32 for_background = 7;
    int32 reason = 8;
    uint32 cgroup_ino = 9;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_lazytime/format
message WritebackLazytimeFormat {
    uint64 dev = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint32 mode = 4;
    uint64 dirtied_when = 5;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_lazytime_iput/format
message WritebackLazytimeIputFormat {
    uint64 dev = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint32 mode = 4;
    uint64 dirtied_when = 5;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_mark_inode_dirty/format
message WritebackMarkInodeDirtyFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 flags = 4;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_pages_written/format
message WritebackPagesWrittenFormat {
    uint64 pages = 1;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_queue/format
message WritebackQueueFormat {
    string name = 1;
    uint64 nr_pages = 2;
    uint64 sb_dev = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 range_cyclic = 6;
    int32 for_background = 7;
    int32 reason = 8;
    uint32 cgroup_ino = 9;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_queue_io/format
message WritebackQueueIoFormat {
    string name = 1;
    uint64 older = 2;
    uint64 age = 3;
    int32 moved = 4;
    int32 reason = 5;
    uint32 cgroup_ino = 6;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_sb_inodes_requeue/format
message WritebackSbInodesRequeueFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 dirtied_when = 4;
    uint32 cgroup_ino = 5;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_single_inode/format
message WritebackSingleInodeFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 dirtied_when = 4;
    uint64 writeback_index = 5;
    uint64 nr_to_write = 6;
    uint64 wrote = 7;
    uint32 cgroup_ino = 8;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_single_inode_start/format
message WritebackSingleInodeStartFormat {
    string name = 1;
    uint64 ino = 2;
    uint64 state = 3;
    uint64 dirtied_when = 4;
    uint64 writeback_index = 5;
    uint64 nr_to_write = 6;
    uint64 wrote = 7;
    uint32 cgroup_ino = 8;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_start/format
message WritebackStartFormat {
    string name = 1;
    uint64 nr_pages = 2;
    uint64 sb_dev = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 range_cyclic = 6;
    int32 for_background = 7;
    int32 reason = 8;
    uint32 cgroup_ino = 9;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_wait/format
message WritebackWaitFormat {
    string name = 1;
    uint64 nr_pages = 2;
    uint64 sb_dev = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 range_cyclic = 6;
    int32 for_background = 7;
    int32 reason = 8;
    uint32 cgroup_ino = 9;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_wait_iff_congested/format
message WritebackWaitIffCongestedFormat {
    uint32 usec_timeout = 1;
    uint32 usec_delayed = 2;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_wake_background/format
message WritebackWakeBackgroundFormat {
    string name = 1;
    uint32 cgroup_ino = 2;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_write_inode/format
message WritebackWriteInodeFormat {
    string name = 1;
    uint64 ino = 2;
    int32 sync_mode = 3;
    uint32 cgroup_ino = 4;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_write_inode_start/format
message WritebackWriteInodeStartFormat {
    string name = 1;
    uint64 ino = 2;
    int32 sync_mode = 3;
    uint32 cgroup_ino = 4;
}

// /sys/kernel/debug/tracing/events/writeback/writeback_written/format
message WritebackWrittenFormat {
    string name = 1;
    uint64 nr_pages = 2;
    uint64 sb_dev = 3;
    int32 sync_mode = 4;
    int32 for_kupdate = 5;
    int32 range_cyclic = 6;
    int32 for_background = 7;
    int32 reason = 8;
    uint32 cgroup_ino = 9;
}

